--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Hello! I’m Sumaiya Sharmeen, but you can call me Sumo! 😊 I’m an undergraduate student at IUBAT, passionate about coding and technology. As a beginner coder, I’m exploring programming, data structures, and web development, constantly improving my skills in Python, C, and JavaScript.
+									<p>Hello! I’m Sumaiya Sharmeen, but you can call me Sumo. I’m an undergraduate student at IUBAT, passionate about coding and technology. As a beginner coder, I’m exploring programming, data structures, and web development, constantly improving my skills in Python, C, and JavaScript.
 
 										I love problem-solving and enjoy working on hands-on projects that enhance my learning. I’m also curious about Data Science and machine learning and eager to expand my knowledge in these fields. </p>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>I’m always open to collaborations, learning opportunities, and networking to grow as a software developer.</p>
+									<p> </p>
 								</div>
 							</div>
 						</div>
